fix vertical alignment

--- a/src/styles/clean-blog.css
+++ b/src/styles/clean-blog.css
@@ -94,6 +94,11 @@ hr.small {
     transform: rotate(45deg);
 }
 
+.vertical-align {
+    display: flex;
+    align-items: center;
+}
+
 @media only screen and (min-width: 768px) {
     .navbar-custom {
         background: transparent;
